# -rust-learing-agai

./: .gitignore
.claude/: memory.md  settings.local.json
docs/: rust-book-ch1-4-summary.md  rust-book-ch10-17-summary.md  rust-book-ch5-9-summary.md
exercises/: Cargo.toml  todos.json
exercises/calculator_cli/src/: main.rs
exercises/demo/: Cargo.toml
exercises/demo/src/: container.rs  enums_test.rs  exception_process.rs  struct_test.rs  trait_test.rs
exercises/fizzbuzz_and_fib/: Cargo.toml
exercises/fizzbuzz_and_fib/src/: main.rs
exercises/oneTofoure/: Cargo.toml
exercises/oneTofoure/src/: main.rs
exercises/todo_cli/src/: main.rs
note/: copy-vs-move.md  misc-notes.md  reference-vs-borrowing.md  rust_concepts.md  stack-vs-heap-allocation.md  string-vs-str-vs-ref-string.md
plans/: happy-exploring-willow.md
