[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "one_to_four_test"
path = "src/one_to_four_test.rs"


[[bin]]
name = "struct_test"
path = "src/struct_test.rs"
