[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.36"

[[bin]]
name = "one_to_four_test"
path = "src/one_to_four_test.rs"


[[bin]]
name = "struct_test"
path = "src/struct_test.rs"


[[bin]]
name = "enums_test"
path = "src/enums_test.rs"


[[bin]]
name = "container"
path = "src/container.rs"

[[bin]]
name = "exception_process"
path = "src/exception_process.rs"


[[bin]]
name = "trait_test"
path = "src/trait_test.rs"

[profile.release]
panic = 'abort'
